Signup workflow completed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+
+/* Preline UI */
+@source "./node_modules/preline/dist/*.js";
+@import "../node_modules/preline/variants.css";
+
+/* Plugins */
+@plugin "@tailwindcss/forms";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
