--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,8 +24,8 @@
 
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/*  padding: 3.5rem;*/
+/*  text-align: center;*/
 }
 
 a {
