--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   max-width: 1280px;
-  margin: 0 auto;
+/*  margin: 0 auto;*/
 /*  padding: 3.5rem;*/
 /*  text-align: center;*/
 }
